--- a/pom.xml
+++ b/pom.xml
@@ -47,6 +47,12 @@
         </exclusion>
       </exclusions>
     </dependency>
+    <dependency>
+      <groupId>com.telran</groupId>
+      <artifactId>panels</artifactId>
+      <version>1.0-SNAPSHOT</version>
+      <scope>test</scope>
+    </dependency>
   </dependencies>
   <build>
     <resources>
