--- a/pom.xml
+++ b/pom.xml
@@ -220,5 +220,21 @@
         </plugins>
       </build>
     </profile>
+      <profile>
+          <id>alexander</id>
+          <build>
+              <plugins>
+                  <plugin>
+                      <groupId>org.apache.maven.plugins</groupId>
+                      <artifactId>maven-surefire-plugin</artifactId>
+                      <configuration>
+                          <suiteXmlFiles>
+                              <suiteXmlFile>src/test/resources/testingAlexanderSmoke.xml</suiteXmlFile>
+                          </suiteXmlFiles>
+                      </configuration>
+                  </plugin>
+              </plugins>
+          </build>
+      </profile>
   </profiles>
 </project>
