--- a/pom.xml
+++ b/pom.xml
@@ -221,6 +221,22 @@
       </build>
     </profile>
     <profile>
+      <id>kapelovich</id>
+      <build>
+        <plugins>
+          <plugin>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-surefire-plugin</artifactId>
+            <configuration>
+              <suiteXmlFiles>
+                <suiteXmlFile>src/test/resources/testngKapelovichSmoke.xml</suiteXmlFile>
+              </suiteXmlFiles>
+            </configuration>
+          </plugin>
+        </plugins>
+      </build>
+    </profile>
+    <profile>
       <id>iakov</id>
       <build>
         <plugins>
